Moved the video-list a little lower to prevent overlap with video stack

--- a/digital-signage-app-v2/app/styles/video-list.css
+++ b/digital-signage-app-v2/app/styles/video-list.css
@@ -4,7 +4,7 @@
 
   right: 0px;
   left: 0px;
-  top: 40%;
+  top: calc(40% + 28px);
 
   z-index: 50;
 }
